[julia-git-pango_jll-src] fix typo

--- a/archlinuxcn/julia-git-pango_jll-src/lilac.yaml
+++ b/archlinuxcn/julia-git-pango_jll-src/lilac.yaml
@@ -22,6 +22,6 @@ update_on:
     provided: libpangocairo-1.0.so
   - source: alpm
     alpm: pango
-    provided: libpangooft2-1.0.so
+    provided: libpangoft2-1.0.so
   - source: manual
     manual: 1
